--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,12 @@
             <artifactId>juh</artifactId>
             <version>3.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.openoffice</groupId>
+            <artifactId>unoil</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+
 
     </dependencies>
 
